# stm32f3_embassy_async_i2c

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
