[package]
name = "stm32f3_embassy_async_i2c"
version = "0.1.0"
authors = ["Witold Lipieta <witek103@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/witek103/stm32f3_embassy_async_i2c"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-stm32 = { version = "0.1.0", features = [ "defmt", "stm32f303cb", "unstable-pac", "memory-x", "time-driver-any", "exti"]  }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
mpu-6500-async = { version = "0.1.0", git = "https://github.com/witek103/mpu-6500-rs.git", features = ["defmt"] }
embassy-embedded-hal = "0.1.0"
static_cell = "2.0.0"
vl53l1x-async = { version = "0.1.0", git = "https://github.com/witek103/vl53l1x-rs.git", features = ["defmt"] }

[features]
calibrate-gyro = []

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
debug = true
